# flash-attention-impls

./: .gitignore  LICENSE  README.md
code/: README.md
code/cuda_fa1/: Makefile  cudafa1  flashAttention.cu  flashAttention.h  main  main.cu  profile_ncu
code/cutlass_cuda_fa1/run/: BUILD_AND_TEST.md  CHANGES_SUMMARY.md  CMakeLists.txt  COMPLETE_SUMMARY.md  CUTLASS_IMPLEMENTATION.md  HEAD_DIM_OPTIMIZATION.md  HOW_TO_CHANGE_TILE_SIZE.md  IMPLEMENTATION_COMPARISON.md  MEMORY_BOTTLENECK_ANALYSIS.md  Makefile  PARALLELIZATION_STRATEGY.md  PARALLEL_SOFTMAX_OPTIMIZATION.md  PERFORMANCE_BENCHMARK.md  RENAMING_SUMMARY.md  RESOURCE_USAGE_ANALYSIS.md  TILING_SIZE_ANALYSIS.md  WARP_STRATEGY_ANALYSIS.md  WORK_DEPTH_COMPLEXITY.md  build_and_run.sh  flash_attn_cutlass.cu  flash_attn_cutlass_parallel.cu  flash_attn_minimal.cu  flash_attn_minimal_dim32.cu  flash_attn_unified.cu  perf  perf_1_1_1024_64  perf_1_1_2048_64  perf_1_1_4096_32  perf_1_1_4096_64  perf_1_1_512_64  perf_1_1_8192_32  perf_1_1_8192_64  perf_1_32_8192_128  perf_1_32_8192_32  perf_1_32_8192_64  perf_2_32_8192_128  perf_flash_attn_cutlass.cu  res  test_flash_attn  test_flash_attn.cu
code/triton_fa2/: FA2-triton.py
code/zhigao yan/: flashAttention.cu
report/: custom.bib  pmph-a6.bbl  pmph-a6.blg  pmph-a6.tex
